spremenjeni backend endpointi, posodbljena schema (slike+kategorije), poenostavljeni queirji
